# agi

./: .gitignore  .gitkeep  README.md  agi.ipynb  agi_(3) (1).ipynb  agi_(3).ipynb  codebase.py  codebase.txt  config.yaml  find_sequence_length.py  program.txt  project_code.py  pyproject.toml  requirements.txt  upload.py
checkpoints/20241004_221330/: hparams.yaml
data/: encoded_data.txt  raw_dawg.txt  training_data.txt  validation_data.txt
src/: callbacks.py  dataset.py  encode.py  encode_local.py  gcs_utils.py  layers.py  main.py  model.py  predict.py  util.py
temp_data/: training_data.txt  validation_data.txt
tests/: create_mask.py  masks.py  p_nucleus.py
