[tool.poetry]
name = "agi"
version = "0.1.0"
description = "AGI: Toward General AI through Advanced Programming Language Understanding"
authors = ["Matthew <matthew@zeti.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
